@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-12T01:49:23Z",
+  "timestamp" : "2022-06-12T08:20:17Z",
   "count_outdated" : 2144,
   "uniques_outdated" : 424,
-  "count" : 2178,
+  "count" : 2177,
   "uniques" : 446,
   "clones" : [
     {
       "timestamp": "2022-05-29T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
