@@ -1,10 +1,10 @@
 {
-  "count": 34,
+  "count": 33,
   "uniques": 9,
   "clones": [
     {
       "timestamp": "2022-05-29T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
